object-fit contain -> fill to make sure the video controls do not overflow the image sequence

--- a/src/css/player51.css
+++ b/src/css/player51.css
@@ -87,7 +87,7 @@
   margin: auto;
   height: 100%;
   width: 100%;
-  object-fit: contain;
+  object-fit: fill;
 }
 
 .p51-contained-canvas {
